# vcpkg-base-example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
overlay-port/polaris-cpp/: usage
proto/: hello.proto
src/: main.cpp
